KONZEK_TASK/Task-3/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-http-server
spec:
  selector:
    app: python-http-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
