KONZEK_TASK/Task-3/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-http-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: python-http-server.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-http-server
            port:
              number: 80
